[package]
name = "demo"
version = "0.1.0"
authors = ["xjd <xjd@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uint = { version = "0.9.1" }


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
